--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
-    "styled-components": "^6.0.0-rc.3",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "yarn run build && aws s3 sync build/ s3://wanted-2306-homework"
   },
   "eslintConfig": {
     "extends": [
